--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1763,34 +1763,34 @@
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.b174x59c[class][class]:focus-visible::after {
+  .dir.header__search-tabs-filter-btn-container-inactive[class][class]:focus-visible::after {
     transition: none
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.b1odri3w[class][class]:focus-visible::after {
+  .dir.header__search-tabs-filter-btn-container-active[class][class]:focus-visible::after {
     transition: none
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.c1l1dklw[class][class]:focus-visible {
+  .dir.header__search-tabs-item[class][class]:focus-visible {
     transition: none
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.v1ri224d[class][class]:focus-visible {
+  .dir.header__search-tabs-item-btn[class][class]:focus-visible {
     -webkit-transition: none;
     transition: none
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.v1ri224d[class][class]:focus-visible {
+  .dir.header__search-tabs-item-btn[class][class]:focus-visible {
     -webkit-transition: none;
     transition: none
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.c1ut965[class][class]:focus-visible {
+  .dir.header__search-tabs-links[class][class]:focus-visible {
     -webkit-transition: none;
     transition: none
   }
