--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -10465,7 +10465,7 @@ h3:first-child {
 ._19471dk:last-child {
   margin-right: 0 !important;
 }
-._5up9lg0 {
+.explore-filter__date-text {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-pack: center !important;
@@ -27600,7 +27600,7 @@ html :where(img[class*='wp-image-']) {
   font-weight: 400 !important;
   text-decoration: line-through !important;
 }
-._6gi1qsw {
+.explore-filter__date-text {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-pack: center !important;
@@ -27619,7 +27619,7 @@ html :where(img[class*='wp-image-']) {
   color: #222 !important;
   border: 1.5px solid #fff !important;
 }
-._6gi1qsw:hover {
+.explore-filter__date-text:hover {
   background: #fff !important;
   border: 1.5px solid #222 !important;
 }
