--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -9414,12 +9414,12 @@ select[disabled] {
   transform: translate3d(0, 0, 0);
 }
 @media (min-width: 744px) {
-  .dir.ln2bl2p[class][class]:focus-visible {
+  .dir.card__location--click[class][class]:focus-visible {
     transition: box-shadow 0.2s;
     box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
   }
   @media (prefers-reduced-motion: reduce) {
-    .dir.ln2bl2p[class][class]:focus-visible {
+    .dir.card__location--click[class][class]:focus-visible {
       transition: none;
     }
   }
@@ -9995,7 +9995,7 @@ h3:first-child {
   display: grid;
   grid-template-columns: 100%;
 }
-.card__slides_item_wrapper[class][class] {
+.card__slides__item__wrapper[class][class] {
   flex-direction: column;
   grid-area: 1/1/2/2;
   height: 100%;
@@ -10003,54 +10003,54 @@ h3:first-child {
   opacity: 0;
   z-index: 2;
 }
-.dir.card__slides_item_wrapper[class][class] {
+.dir.card__slides__item__wrapper[class][class] {
   margin: 0;
   padding-top: 0;
 }
 .card__slides-content[class][class] {
   grid-area: 1/1/2/2;
 }
-.card__slides_item_wrapper-visibility[class][class] {
+.card__slides__item__wrapper-visibility[class][class] {
   display: none;
 }
 @supports (content-visibility: hidden) {
-  .card__slides_item_wrapper-visibility[class][class] {
+  .card__slides__item__wrapper-visibility[class][class] {
     content-visibility: hidden;
     display: flex;
   }
 }
-.g1wiliwt[class][class] {
+.card__location[class][class] {
   --card-content-grid_gap: var(--d-b-mrdy) var(--fgg-f-l-a);
   --card-content-grid_template-columns: minmax(0, 1fr) 15%;
 }
-.m1cp3yuo[class][class] {
+.card__location__wrapper[class][class] {
   --aspect_ratio_wrapper-ratio: 20/19;
   --aspect_ratio_wrapper-padding_fallback: 95%;
   --aspect_ratio_wrapper-position_fallback: relative;
 }
-.dir.m1cp3yuo[class][class] {
+.dir.card__location__wrapper[class][class] {
   margin-bottom: var(--b-y-unon);
 }
-.a3g92ry[class][class] {
+.card__location--primary[class][class] {
   grid-column: -2/-1;
   grid-row: 1;
   justify-self: end;
   width: 100%;
 }
-.pc0djro[class][class] {
+.card__location--tertiary[class][class] {
   grid-column: 1/-1;
 }
-.dir.pc0djro[class][class] {
+.dir.card__location--tertiary[class][class] {
   margin-top: 6px;
 }
 @media (min-width: 744px) {
-  .dir.ln2bl2p[class][class]:focus-visible {
+  .dir.card__location--click[class][class]:focus-visible {
     -webkit-transition: box-shadow 0.2s;
     transition: box-shadow 0.2s;
     box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
   }
   @media (prefers-reduced-motion: reduce) {
-    .dir.ln2bl2p[class][class]:focus-visible {
+    .dir.card__location--click[class][class]:focus-visible {
       -webkit-transition: none;
       transition: none;
     }
@@ -13397,11 +13397,11 @@ h3:first-child {
   min-width: 100% !important;
   display: flex !important;
 }
-.a8jt5op dir dir-ltr {
+.text__highlight dir dir-ltr {
   border: 0;
   padding: 0;
 }
-.a8jt5op[class][class] {
+.text__highlight[class][class] {
   height: 1px;
   overflow: clip;
   position: absolute;
@@ -34082,28 +34082,28 @@ tr.show-desktop {
 .dir-rtl.atm_h0_exct8b:is(*, #x) {
   margin-left: 16px;
 }
-.dir-ltr.atm_u_1yy80mb:is(*, #x) {
+.dir-ltr.animation__direction--alternate:is(*, #x) {
   animation-direction: alternate;
 }
-.dir-rtl.atm_u_1yy80mb:is(*, #x) {
+.dir-rtl.animation__direction--alternate:is(*, #x) {
   animation-direction: alternate;
 }
-.dir-ltr.atm_y_9cwzv5:is(*, #x) {
+.dir-ltr.animation__duration--1s:is(*, #x) {
   animation-duration: 1s;
 }
-.dir-rtl.atm_y_9cwzv5:is(*, #x) {
+.dir-rtl.animation__duration--1s:is(*, #x) {
   animation-duration: 1s;
 }
-.dir-ltr.atm_12_q7pw6w:is(*, #x) {
+.dir-ltr.animation__fill__mode--forwards:is(*, #x) {
   animation-fill-mode: forwards;
 }
-.dir-rtl.atm_12_q7pw6w:is(*, #x) {
+.dir-rtl.animation__fill__mode--forwards:is(*, #x) {
   animation-fill-mode: forwards;
 }
-.dir-ltr.atm_16_12c5xpv:is(*, #x) {
+.dir-ltr.animation__iteration__count--infinite:is(*, #x) {
   animation-iteration-count: infinite;
 }
-.dir-rtl.atm_16_12c5xpv:is(*, #x) {
+.dir-rtl.animation__iteration__count--infinite:is(*, #x) {
   animation-iteration-count: infinite;
 }
 .dir-ltr.atm_1c_lvmtox:is(*, #x) {
@@ -34112,45 +34112,45 @@ tr.show-desktop {
 .dir-rtl.atm_1c_lvmtox:is(*, #x) {
   animation-name: animation-64e8c8;
 }
-.dir-ltr.atm_1k_1ytfnp0:is(*, #x) {
+.dir-ltr.animation__timing__function--ease--in--out:is(*, #x) {
   animation-timing-function: ease-in-out;
 }
-.dir-rtl.atm_1k_1ytfnp0:is(*, #x) {
+.dir-rtl.animation__timing__function--ease--in--out:is(*, #x) {
   animation-timing-function: ease-in-out;
 }
-.dir.atm_2d_1r31cwp:is(*, #x) {
+.dir.animation__bg__color--current:is(*, #x) {
   background-color: currentColor;
 }
 @media (prefers-reduced-motion: reduce) {
   @media (prefers-reduced-motion: reduce) {
-    .dir-ltr.atm_e2p1ow_glywfm:is(*, x) {
+    .dir-ltr.animation__all--none:is(*, x) {
       animation: none;
     }
-    .dir-rtl.atm_e2p1ow_glywfm:is(*, x) {
+    .dir-rtl.animation__all--none:is(*, x) {
       animation: none;
     }
   }
-  .dir-ltr.atm_e2p1ow_glywfm:is(*, x) {
+  .dir-ltr.animation__all--none:is(*, x) {
     animation: none;
   }
-  .dir-rtl.atm_e2p1ow_glywfm:is(*, x) {
+  .dir-rtl.animation__all--none:is(*, x) {
     animation: none;
   }
 }
 @media (prefers-reduced-motion: reduce) {
   @media (prefers-reduced-motion: reduce) {
-    .atm_5rfkrh_7tcf61:is(*, x) {
+    .animation__opacity:is(*, x) {
       opacity: 0.09049773755656108;
     }
   }
-  .atm_5rfkrh_7tcf61:is(*, x) {
+  .animation__opacity:is(*, x) {
     opacity: 0.09049773755656108;
   }
 }
-.dir-ltr.atm_1c_glywfm:is(*, #x) {
+.dir-ltr.animation__name--none:is(*, #x) {
   animation-name: none;
 }
-.dir-rtl.atm_1c_glywfm:is(*, #x) {
+.dir-rtl.animation__name--none:is(*, #x) {
   animation-name: none;
 }
 .dir.atm_4b_18pqv07:is(*, #x) {
@@ -34288,7 +34288,7 @@ tr.show-desktop {
   line-height: var(--dpgw-ac);
   letter-spacing: 0.02em;
 }
-.a8jt5op:is(*, #x#x) {
+.text__highlight:is(*, #x#x) {
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
   height: 1px;
@@ -34298,7 +34298,7 @@ tr.show-desktop {
   white-space: nowrap;
   width: 1px;
 }
-.dir.a8jt5op:is(*, #x#x) {
+.dir.text__highlight:is(*, #x#x) {
   border: 0;
   padding: 0;
 }
@@ -38993,8 +38993,8 @@ tr.show-desktop {
   }
 }
 
-.dir-ltr.atm_16_12c5xpv.atm_16_12c5xpv,
-.dir-rtl.atm_16_12c5xpv.atm_16_12c5xpv {
+.dir-ltr.animation__iteration__count--infinite.animation__iteration__count--infinite,
+.dir-rtl.animation__iteration__count--infinite.animation__iteration__count--infinite {
   animation-iteration-count: infinite;
 }
 .dir-ltr.t2pjd0h[class][class] {
@@ -39920,10 +39920,10 @@ tr.show-desktop {
     overflow: clip;
   }
 }
-.f15liw5s[class][class] {
+.card__location--secondary[class][class] {
   grid-column: 1/-1;
 }
-.cb4nyux[class][class] {
+.card__location--grid[class][class] {
   display: grid;
   gap: var(--card-content-grid_gap, var(--h-x-sf-jw));
   grid-template-columns: var(
@@ -39932,7 +39932,7 @@ tr.show-desktop {
   );
   grid-template-rows: var(--card-content-grid_template-rows, unset);
 }
-.ln2bl2p[class][class] {
+.card__location--click[class][class] {
   display: block;
   height: 100%;
   position: absolute;
@@ -39940,45 +39940,45 @@ tr.show-desktop {
   width: 100%;
   outline: 0;
 }
-.dir.ln2bl2p[class][class] {
+.dir.card__location--click[class][class] {
   border-radius: var(--card-container_border-radius, var(--i-g-gvoq));
 }
-.dir-ltr.ln2bl2p[class][class] {
+.dir-ltr.card__location--click[class][class] {
   left: 0;
 }
-.dir-rtl.ln2bl2p[class][class] {
+.dir-rtl.card__location--click[class][class] {
   right: 0;
 }
-.dir.ln2bl2p[class][class]::-moz-focus-inner {
+.dir.card__location--click[class][class]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.ln2bl2p[class][class]:focus::-moz-focus-inner {
+.dir.card__location--click[class][class]:focus::-moz-focus-inner {
   border: none;
 }
-.ln2bl2p[class][class]:-moz-focusring {
+.card__location--click[class][class]:-moz-focusring {
   outline: 0;
 }
 @media (min-width: 744px) {
-  .dir.ln2bl2p[class][class]:focus-visible {
+  .dir.card__location--click[class][class]:focus-visible {
     -webkit-transition: box-shadow 0.2s;
     transition: box-shadow 0.2s;
     box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
   }
   @media (prefers-reduced-motion: reduce) {
-    .dir.ln2bl2p[class][class]:focus-visible {
+    .dir.card__location--click[class][class]:focus-visible {
       -webkit-transition: none;
       transition: none;
     }
   }
-  .dir.ln2bl2p[class][class]:focus[data-focus-visible-added] {
+  .dir.card__location--click[class][class]:focus[data-focus-visible-added] {
     -webkit-transition: box-shadow 0.2s;
     transition: box-shadow 0.2s;
     box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
   }
   @media (prefers-reduced-motion: reduce) {
-    .dir.ln2bl2p[class][class]:focus[data-focus-visible-added] {
+    .dir.card__location--click[class][class]:focus[data-focus-visible-added] {
       -webkit-transition: none;
       transition: none;
     }
@@ -47408,48 +47408,48 @@ tr.show-desktop {
   visibility: hidden;
 }
 
-.dir.atm_u_1yy80mb.atm_u_1yy80mb {
+.dir.animation__direction--alternate.animation__direction--alternate {
   animation-direction: alternate;
 }
-.dir.atm_y_9cwzv5.atm_y_9cwzv5 {
+.dir.animation__duration--1s.animation__duration--1s {
   animation-duration: 1s;
 }
-.dir.atm_12_q7pw6w.atm_12_q7pw6w {
+.dir.animation__fill__mode--forwards.animation__fill__mode--forwards {
   animation-fill-mode: forwards;
 }
 .dir.atm_1c_lvmtox.atm_1c_lvmtox {
   animation-name: animation-64e8c8;
 }
-.dir.atm_1k_1ytfnp0.atm_1k_1ytfnp0 {
+.dir.animation__timing__function--ease--in--out.animation__timing__function--ease--in--out {
   animation-timing-function: ease-in-out;
 }
-.dir.atm_2d_1r31cwp.atm_2d_1r31cwp {
+.dir.animation__bg__color--current.animation__bg__color--current {
   background-color: currentColor;
 }
 @media (prefers-reduced-motion: reduce) {
   @media (prefers-reduced-motion: reduce) {
-    .dir.atm_e2p1ow_glywfm.atm_e2p1ow_glywfm {
+    .dir.animation__all--none.animation__all--none {
       animation: none;
     }
   }
-  .dir.atm_e2p1ow_glywfm.atm_e2p1ow_glywfm {
+  .dir.animation__all--none.animation__all--none {
     animation: none;
   }
 }
 @media (prefers-reduced-motion: reduce) {
   @media (prefers-reduced-motion: reduce) {
-    .atm_5rfkrh_7tcf61.atm_5rfkrh_7tcf61 {
+    .animation__opacity.animation__opacity {
       opacity: 0.09049773755656108;
     }
   }
-  .atm_5rfkrh_7tcf61.atm_5rfkrh_7tcf61 {
+  .animation__opacity.animation__opacity {
     opacity: 0.09049773755656108;
   }
 }
-.dir.atm_1c_glywfm.atm_1c_glywfm {
+.dir.animation__name--none.animation__name--none {
   animation-name: none;
 }
-.atm_k4_7tcf61 {
+.animation__opacity--secondary {
   opacity: 0.09049773755656108;
 }
 .dir.atm_uc_ouvu0h {
@@ -47492,7 +47492,7 @@ tr.show-desktop {
   transition: box-shadow 0.2s;
 }
 
-.dir.atm_16_12c5xpv.atm_16_12c5xpv {
+.dir.animation__iteration__count--infinite.animation__iteration__count--infinite {
   animation-iteration-count: infinite;
 }
 .atm_fc_1yb4nlp.atm_fc_1yb4nlp {
@@ -47541,7 +47541,7 @@ tr.show-desktop {
 .ll4r2nl[class][class]:nth-child(1n) .focus-visible[class][class] {
   outline: 2px solid var(--f-k-smk-x);
 }
-.a8jt5op[class][class] {
+.text__highlight[class][class] {
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
   height: 1px;
@@ -49952,7 +49952,7 @@ a:hover {
 .dir-rtl.atm_gz_1y44olf.atm_gz_1y44olf {
   margin-right: 4px;
 }
-.a8jt5op[class][class] {
+.text__highlight[class][class] {
   -webkit-clip: rect(0 0 0 0);
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(100%);
@@ -49964,7 +49964,7 @@ a:hover {
   white-space: nowrap;
   width: 1px;
 }
-.dir.a8jt5op[class][class] {
+.dir.text__highlight[class][class] {
   border: 0;
   padding: 0;
 }
